--- a/index.html
+++ b/index.html
@@ -4,14 +4,34 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>My page</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
+  <header>
+     <script src="script.js"></script>
+    <h1>Beatriz Marassá - Minha página pessoal </h1>
+    <p> Aqui tem um breve relato sobre quem eu sou.. </p></P>
+  </header>
+  <section> <h2> Quem sou eu?</h2>
+    <p> Eu sou a Beatriz, tenho 25 anos e faço o curso de graduação em Engenharia de Software. Estou adorando esse mundo da tecnologia e tambem descobrir o quanto a tecnologia está presente em nosso dia, até nos mínimos detalhes. <br>
+    Eu nasci em São paulo, na capital, mas atualmente moro em Varginha, em Minas Gerais, e estou adorando a calmaria e silencio desse lugar maravilhoso.  </p>
+  </section>
+ <section> <h2> 5 curiosidades sobre mim </h2>
+    <ul> 
+      <li> Eu tenho pavor de altura e escada rolante;</li>
+      <li> Iniciei anteriormente graduação em Farmácia;</li>
+      <li> Trabalho atualmente no ecommerce;</li>
+      <li> Sou extremamente rígida com pontualidade;</li>
+      <li> Sou dedicada e calma;</li> 
+    </ul>
+ </section>
+ <footer> <h2> Contato </h2>
+  <p>Meu email é beatriz.marassa@al.infnet.edu.br </p>
+   
+ </footer>
   
-  <script src="script.js"></script>
-
  <!--
 This script places a badge on your repl's full-browser view back to your repl's cover page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green, teal, blue, blurple, magenta, pink!
 -->
